// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/Choice Step Active 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 .c12 {
  color: #fff;
}

.c21 .c12 {
  color: #6e849a;
}

.c22 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c16 {
  cursor: crosshair;
}

.vf-canvas--merging .c16,
.vf-canvas--selecting-group .c16,
.vf-canvas__node--disabled .c16 {
  cursor: inherit;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c19 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c19 {
  cursor: crosshair;
}

.vf-canvas--merging .c19,
.vf-canvas--selecting-group .c19,
.vf-canvas__node--disabled .c19 {
  cursor: inherit;
}

.c19::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c19.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c23 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c24 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c25 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c26 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Choice Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Choice Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#3a5999"
                  size={16}
                >
                  <svg
                    data-file-name="SvgChoice"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order Pizza
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order my favourite
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Where is my order?
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c17"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c18"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c19 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Connected 1`] = `
.c19 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c19 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 .c12 {
  color: #fff;
}

.c23 .c12 {
  color: #6e849a;
}

.c24 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c29 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c20 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c16 {
  cursor: crosshair;
}

.vf-canvas--merging .c16,
.vf-canvas--selecting-group .c16,
.vf-canvas__node--disabled .c16 {
  cursor: inherit;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#62778c1f,#62778c3d 100%);
}

.c16.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background: linear-gradient(to bottom,#5d9df51f,#5d9df53d 100%);
}

.c21 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c21 {
  cursor: crosshair;
}

.vf-canvas--merging .c21,
.vf-canvas--selecting-group .c21,
.vf-canvas__node--disabled .c21 {
  cursor: inherit;
}

.c21::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#8da2b51f,#8da2b53d 100%);
}

.c21.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background: linear-gradient(to bottom,#5d9df51f,#5d9df53d 100%);
}

.c17 {
  position: absolute;
  right: -14px;
  width: 13px;
  height: 4px;
}

.c18 {
  stroke: rgb(141,162,181);
  stroke-width: 1.5px;
  fill: transparent;
  stroke-width: 1.5px;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.vf-canvas__link--highlighted .c18 {
  stroke: #2c85ff;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c29 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c25 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c26 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c27 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c28 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Choice Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Choice Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#3a5999"
                  size={16}
                >
                  <svg
                    data-file-name="SvgChoice"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order Pizza
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c17"
              >
                <path
                  className="c18"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order my favourite
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c17"
              >
                <path
                  className="c18"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Where is my order?
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c17"
              >
                <path
                  className="c18"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c19"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c20"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
              <svg
                className="c17"
              >
                <path
                  className="c18"
                  d="M 0 4 L 13 4"
                />
              </svg>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Empty 1`] = `
.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c17 .c12 {
  color: #fff;
}

.c18 .c12 {
  color: #6e849a;
}

.c19 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c16 {
  cursor: crosshair;
}

.vf-canvas--merging .c16,
.vf-canvas--selecting-group .c16,
.vf-canvas__node--disabled .c16 {
  cursor: inherit;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c16.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c24 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c20 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c21 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c22 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c23 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Choice Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Choice Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Multiple 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 .c12 {
  color: #fff;
}

.c21 .c12 {
  color: #6e849a;
}

.c22 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c16 {
  cursor: crosshair;
}

.vf-canvas--merging .c16,
.vf-canvas--selecting-group .c16,
.vf-canvas__node--disabled .c16 {
  cursor: inherit;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c19 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c19 {
  cursor: crosshair;
}

.vf-canvas--merging .c19,
.vf-canvas--selecting-group .c19,
.vf-canvas__node--disabled .c19 {
  cursor: inherit;
}

.c19::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c19.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c23 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c24 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c25 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c26 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Choice Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Choice Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#3a5999"
                  size={16}
                >
                  <svg
                    data-file-name="SvgChoice"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order Pizza
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order my favourite
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Where is my order?
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c17"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c18"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c19 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Single 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c20 .c12 {
  color: #fff;
}

.c21 .c12 {
  color: #6e849a;
}

.c22 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c16 {
  cursor: crosshair;
}

.vf-canvas--merging .c16,
.vf-canvas--selecting-group .c16,
.vf-canvas__node--disabled .c16 {
  cursor: inherit;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c19 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c19 {
  cursor: crosshair;
}

.vf-canvas--merging .c19,
.vf-canvas--selecting-group .c19,
.vf-canvas__node--disabled .c19 {
  cursor: inherit;
}

.c19::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c19.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c27 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c23 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c24 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c25 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c26 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="Choice Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Choice Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#3a5999"
                  size={16}
                >
                  <svg
                    data-file-name="SvgChoice"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Order Pizza
                </div>
              </span>
              <div
                className="c16 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c17"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c18"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c19 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;
